kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - host: "aniket.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mainapp
            port:
              number: 8080
